--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 		Number:
 		<input type="text" id="n1">
 		<p>
-
 			<button onclick="inverse()">1/x</button>
 			<button onclick="square()"> x^2 </button>
             <button onclick="cube()"> x^3 </button>
             <button onclick="power_4()"> x^4</button>
+			<button onclick="sine()"> sin </button>
 		</p>
 		<script type="text/javascript">
 			function cube() {
 				var num = document.getElementById("n1");
 				num.value = Math.pow(num.value, 3);
 			}
+
 			function square() {
 				var num = document.getElementById("n1");
 				num.value = Math.pow(num.value, 2);
@@ -31,6 +32,10 @@
             function power_4() {
 				var num = document.getElementById("n1");
 				num.value = Math.pow(num.value, 4);
+			}
+			function sine() {
+				var num = document.getElementById("n1");
+				num.value = Math.sin(num.value);
 			}
 		</script>
 	</body>
